--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
  <body>
-    <header class="header-first">
+    <!-- <header class="header-first">
       <div class="container header-container">
         <nav class="header-nav">
         <a class="logo" href="./index.html">Web<span class="accent">Studio</span></a>
@@ -38,10 +38,10 @@
            </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
         <!-- 1 Hero section -->
-        <section class="hero-section">
+        <!-- <section class="hero-section">
             <div class="container">
                   <h1 class="hero-title">
                     Effective Solutions
@@ -49,7 +49,7 @@
                   </h1>
                   <button class="button" type="button" data-modal-open>Order Service</button>
             </div>
-        </section>
+        </section> -->
         <!-- 2 Studio section -->
         <section class="studio-section section">
             <div class="container">
@@ -61,7 +61,7 @@
                             <use href="./images/icons.svg#icon-antenna-1"></use>
                         </svg>
                       </div>
-                    <h3 class="club-subtitle">Strategy</h3>
+                    <h3 class="club-subtitle subtitle">Strategy</h3>
                     <p class="club-text">
                         Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. 
@@ -73,7 +73,7 @@
                             <use href="./images/icons.svg#icon-clock-1"></use>
                         </svg>
                       </div>
-                    <h3 class="club-subtitle">Punctuality</h3>
+                    <h3 class="club-subtitle subtitle">Punctuality</h3>
                     <p class="club-text">
                         Bring the key message to the brand's audience 
                         for the best price within the shortest possible time. 
@@ -85,7 +85,7 @@
                             <use href="./images/icons.svg#icon-diagram-1"></use>
                         </svg>
                       </div>
-                    <h3 class="club-subtitle">Diligence</h3>
+                    <h3 class="club-subtitle subtitle">Diligence</h3>
                     <p class="club-text">
                         Research and confirm brands that present 
                         the strongest digital growth opportunities and minimize risk. 
@@ -97,7 +97,7 @@
                             <use href="./images/icons.svg#icon-astronaut-1"></use>
                         </svg>
                       </div>
-                    <h3 class="club-subtitle">Technologies</h3>
+                    <h3 class="club-subtitle subtitle">Technologies</h3>
                     <p class="club-text">
                         Design practice focused on digital experiences. 
                         We bring forth a deep passion for problem-solving. 
@@ -269,7 +269,7 @@
             <ul class="portfolio-item">
                 <li class="portfolio-cards">
                     <div class="portfolio-box">
-                        <img src="./images/portfolio/site.jpg" alt="Banking App" width="360">
+                        <img src="./images/portfolio/site.jpg" alt="Banking App" width="360"> 
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · 
                           Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
                     </div>
@@ -337,7 +337,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-club">
             <div class="footer-logo-club">
              <a class="logo-footer" href="./index.html">Web<span class="accent">Studio</span></a>
@@ -393,7 +393,7 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
       <!-- Modal -->
       <div class="backdrop visually-hidden" data-modal>
