--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     </footer>
 
       <!-- Modal visually-hidden-->
-      <div class="backdrop " data-modal>
+      <div class="backdrop visually-hidden" data-modal>
         <div class="modal">
             <button class="modal-close" type="button" data-modal-close>
                 <svg class="modal-button-icon" width="8" height="8">
