--- a/index.html
+++ b/index.html
@@ -654,33 +654,32 @@
             </li>
         </ul>
 
-        <div class="media-icons">
-            <p class="social-media">Social media</p>
-            <ul class="media">
-                <li class="footer-social">            
-                    <a class="footer-social-link" href="#" target="_blank">
-                  <svg class="footer-social-icon" width="24" height="24" > 
+        <div class="media-icons1">
+            <ul class="media1">
+                <li class="footer-social1">            
+                    <a class="footer-social-link1" href="#" target="_blank">
+                  <svg class="footer-social-icon1" width="24" height="24" > 
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                     </a>
                 </li>
-                <li class="footer-social">
-                    <a class="footer-social-link" href="#" target="_blank">
-                  <svg class="footer-social-icon" width="24" height="24" > 
+                <li class="footer-social1">
+                    <a class="footer-social-link1" href="#" target="_blank">
+                  <svg class="footer-social-icon1" width="24" height="24" > 
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                     </a>
                 </li>
-                <li class="footer-social">
-                    <a class="footer-social-link" href="#" target="_blank">
-                  <svg class="footer-social-icon" width="24" height="24" > 
+                <li class="footer-social1">
+                    <a class="footer-social-link1" href="#" target="_blank">
+                  <svg class="footer-social-icon1" width="24" height="24" > 
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                     </a>
                 </li>
-                <li class="footer-social">
-                    <a class="footer-social-link" href="#" target="_blank">
-                  <svg class="footer-social-icon" width="24" height="24" > 
+                <li class="footer-social1">
+                    <a class="footer-social-link1" href="#" target="_blank">
+                  <svg class="footer-social-icon1" width="24" height="24" > 
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                     </a>
